KFileItemActions: fallback to default mimetype when selecting only files

Summary:
KFileItemListProperties::mimeType() returns an empty string if the
selected files have different types, but KMimeTypeTrader does not
support empty mimetypes as query argument.

This causes the following warning

    KMimeTypeTrader: mimeType "" not found

and breaks the bluedevil's 'Send via Bluetooth' plugin.

If we know the user selected only files, we can use the default mimetype
as fallback.

BUG: 393710
FIXED-IN: 5.47

Test Plan: Select two files with different extension and check 'Send via Bluetooth' is in the Dolphin context menu.

Reviewers: #frameworks, dfaure

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12728